# PCA4CD

./: .flake8  .gitignore  Makefile  README.md  __init__.py  metadata.txt  mkdocs.yml  pavement.py  pca4cd.py  pca4cd_dockwidget.py  pca4cd_dockwidget_base.ui  plugin_upload.py  pyproject.toml  requirements.txt  resources.py  resources.qrc
.github/workflows/: pca4cd-package.yml
core/: pca.py  pca_dask_gdal.py  pca_dask_rasterio.py
docs/: README.md  _config.yml  about.md  how_to_use.md  index.md  installation.md
gui/: about.html  about_dialog.py  change_analysis_dialog.py  change_analysis_view_widget.py  component_analysis_dialog.py  layer_view_widget.py  main_analysis_dialog.py  merge_change_layers_dialog.py  pca4cd_dialog.py  pca4cd_dockwidget.py  pca_info_dialog.py  render_widget.py
ui/: about_dialog.ui  change_analysis_dialog.ui  change_analysis_view_widget.ui  component_analysis_dialog.ui  layer_view_widget.ui  main_analysis_dialog.ui  merge_change_layers_dialog.ui  pca4cd_dialog.ui  pca4cd_dockwidget.ui  style_editor.ui
utils/: extra_deps.py  extralibs.py  others_utils.py  qgis_utils.py  system_utils.py
